--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -31,6 +31,10 @@ img#wpstats {display:none;}
 #page_header h1 a img {vertical-align: middle; margin-left: -12px;}
 #page_header:after {content: ''; clear: both; display: block;}
 
+header .sun  {position: absolute; top: 10px; line-height: 0; right: 0;}
+header .sun circle {fill: #33c1ab;}
+header .moon {position: absolute; top: 10px; line-height: 0; right: 42px;}
+
 /*.single #page_header {height: 84px; position: fixed; width: 116px; z-index: 100; top: 2%; left: 2%; background: transparent;}
 .single #page_header h1 a img {width: 116px; padding: 10px;}
 .single #page_header nav {display: none;}*/
@@ -38,7 +42,6 @@ img#wpstats {display:none;}
 #back-arrow-btn {position: fixed; top: 2%; left: 1.5%; width: 42px; height: 42px; background: #fff; border-radius: 25px;
   text-align: center; vertical-align: middle; padding: 10px; z-index: 100;}
 #back-arrow-btn svg {transform: rotate(180deg);}
-
 
 /* ---------------------------------------------------------------------------------------------------------
  * Footer
@@ -399,7 +402,7 @@ body.dark-mode {background: #101010; color: #bbb;}
 .dark-mode #page_content article .post_content_box img,
 .dark-mode #other-posts .other-posts-container .col > div > div img {filter: invert(100%);}
 
-.dark-mode.single .overview header {background: #0e0e0e;}
+.dark-mode.single .overview header {background: #151515;}
 .dark-mode.single h1 {color: #cacaca;}
 
 body.dark-mode .crayon-theme-prism-like {background: #1b1b1b !important;}
@@ -412,3 +415,11 @@ body.dark-mode .crayon-theme-prism-like .crayon-pre .crayon-e {color: #cacaca !i
 body.dark-mode.single-post .overview h3 {color: #fff;}
 
 
+.dark-mode header .sun circle {fill: transparent;}
+.dark-mode header .moon path {fill: #33c1ab;}
+
+.dark-mode .view_box_title {border-color: #252525;}
+.dark-mode #other-posts h3 {border-color: #252525;}
+
+.dark-mode #back-arrow-btn {background: #000;}
+.dark-mode #back-arrow-btn path {fill: #cacaca;}
