--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -417,7 +417,6 @@ body.dark-mode .crayon-theme-prism-like .crayon-pre .crayon-e {color: #cacaca !i
 
 body.dark-mode.single-post .overview h3 {color: #fff;}
 
-
 .dark-mode header .sun circle {fill: transparent;}
 .dark-mode header .moon path {fill: #33c1ab; stroke: #000;}
 
@@ -426,3 +425,39 @@ body.dark-mode.single-post .overview h3 {color: #fff;}
 
 .dark-mode #back-arrow-btn {background: #000;}
 .dark-mode #back-arrow-btn path {fill: #cacaca !important;}
+
+@media (prefers-color-scheme: dark) {
+    body {background: #101010; color: #bbb;}
+    a {color: #666;}
+    .post_date {color: #404040;}
+     
+    #page_header nav a,
+    #page_content article .thumb_text p,
+    #other-posts .other-posts-container .col > div > div h2 p {color: #cacaca;}
+    
+    #page_header h1 a img,
+    #page_content article .post_content_box img,
+    #other-posts .other-posts-container .col > div > div img {filter: invert(100%);}
+    
+    .single .overview header {background: #151515;}
+    .single h1 {color: #cacaca;}
+    
+    body .crayon-theme-prism-like {background: #1b1b1b !important;}
+    body .crayon-theme-prism-like .crayon-pre .crayon-v,
+    body .crayon-theme-prism-like .crayon-pre .crayon-y,
+    body .crayon-theme-prism-like .crayon-pre .crayon-i,
+    body .crayon-theme-prism-like .crayon-pre .crayon-sy,
+    body .crayon-theme-prism-like .crayon-pre .crayon-e {color: #cacaca !important;}
+    
+    body.dark-mode.single-post .overview h3 {color: #fff;}
+    
+    
+    header .sun circle {fill: transparent;}
+    header .moon path {fill: #33c1ab; stroke: #000;}
+    
+    .view_box_title {border-color: #252525;}
+    #other-posts h3 {border-color: #252525;}
+    
+    #back-arrow-btn {background: #000;}
+    #back-arrow-btn path {fill: #cacaca !important;}
+}
