--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -286,8 +286,8 @@ margin:3px; display:inline-block;}
 .ie8 #contact .wpcf7 input{line-height:45px;}
 #contact .wpcf7 textarea {height:200px; overflow:auto; padding-top:20px; padding-bottom:20px;}
 #contact .wpcf7 input[type="submit"] {color:#fff; font-size:14px; cursor: pointer; transition: all 0.4s;
-background: #f5cb8c; -webkit-border-radius:0; -webkit-appearance:none; -webkit-transition:all 0.4s;}
-#contact .wpcf7 input[type="submit"]:hover {transition: all 0.4s; background: #e5a951; -webkit-border-radius:0; -webkit-appearance:none; -webkit-transition:all 0.4s;}
+background: #f5cb8c;}
+#contact .wpcf7 input[type="submit"]:hover {transition: all 0.4s; background: #e5a951;}
 
 /* tip */
 span.wpcf7-not-valid-tip {position: absolute; top: 0px; left: 150px; color:#71aaad;}
