feat: Disqus 광고 제거

--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -20,6 +20,12 @@ img#wpstats {display:none;}
 
 
 /* ---------------------------------------------------------------------------------------------------------
+ * Disqus
+ -------------------------------------------------------------------------------------------------------- */
+div#disqus_thread iframe[sandbox] {max-height: 0px !important;}
+
+
+/* ---------------------------------------------------------------------------------------------------------
  * Header
  -------------------------------------------------------------------------------------------------------- */
 #page_header {height: 320px; line-height: 320px; overflow: hidden;}
