feat: 에세이 메뉴 추가, 카피라이트 수정, 반응형 스타일 수정

--- a/wp-content/themes/Cheolguso/css/responsive_style.css
+++ b/wp-content/themes/Cheolguso/css/responsive_style.css
@@ -44,7 +44,7 @@
 	#page_content .navigation {margin-left:20px;}
 
 	/*nav*/
-	#page_header nav a {font-size:13px;}
+	#page_header nav a {font-size:14px; margin-left: 40px;}
 
 	/*contact*/
 	#contact .col_box .col {display:none;}
@@ -93,6 +93,7 @@
 	#page_header #logo {margin-left:0;}
 
 	/*nav*/
+	#page_header nav a {margin-left: 20px;}
 
 
 	/*page*/
@@ -138,15 +139,18 @@
 	#page_header p {display: none;}
 	#page_header h1 {line-height: 50px; position: static; padding: 15px 0 10px;}
 	#page_header h1 a img {width: 140px; margin-top: 20px;}
-	#page_header nav {text-align: left; float: none; line-height: 30px; margin-left: 0;}
-	#page_header nav a {margin: 0 20px 0 0;}
+	#page_header nav {float: none; margin: 0; display: flex; justify-content: space-between;}
+	#page_header nav a {margin: 0;}
+	#page_header nav a:first-child {margin-left: 0;}
+
 	.ontheanvil > span {display:none;}
 
-	#page_content article {width: 50%; margin: 0 0 20px;}
+	#page_content article {width: 50%; margin: 0 0 10px;}
 	#page_content article h2 {height: auto;}
-	#page_content article .thumb_text {height: 80px;}
+	#page_content article .post_content_box figure {margin-bottom: 0;}
+	#page_content article .thumb_text {height: 70px;}
 	#page_content article .thumb_text p {line-height: 18px; font-size: 12px;}
-
+	#page_content article .post_date {padding-top: 5px;}
 	/*.thumb_text {display:none;}*/
 
 	#page_footer .col {width:300px; margin-left:20px;}
@@ -202,9 +206,6 @@
 	.single #page_header {padding-top: 0; position: absolute; width: 100%; left: 0;}
 	.single .overview header {padding-top: 120px;}
 	.single #page_header h1 a img {width: 80px; padding: 0; margin: 10px 0 0 -6px;}
-
-
-	#page_header nav a:first-child {margin-left: 0;}
 }
 
 
