--- a/wp-content/themes/Cheolguso/css/style.css
+++ b/wp-content/themes/Cheolguso/css/style.css
@@ -205,6 +205,7 @@ margin:3px; display:inline-block;}
 #review_text .left-line-box {border-left: 3px solid #111; padding: 0 20px;}
 #review_text .bg-point-text {background: #F5F2F0; display: inline-block; padding: 0 6px;}
 #review_text .sub-title-text {margin:30px 0 10px; font-size: 18px; color: #111;}
+#review_text .basic-img-box {background: #f5f8f6;}
 
 #review_text .unclear-box {background: #fff6d7; padding-top: 5px; padding-bottom: 5px;}
 
@@ -440,6 +441,7 @@ body.dark-mode.single-post .overview h3 {color: #fff;}
 .dark-mode #about-page a:hover {color: #ddd;}
 
 .dark-mode #review_text .left-line-box {border-left: 3px solid #bbb;}
+.dark-mode #review_text .basic-img-box {background: #1b1b1b;}
 
 /* @media (prefers-color-scheme: dark) {
     body {background: #101010; color: #bbb;}
