feat: 테마 이름 변경

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme name: FalsyLab
+Theme name: falsylab
 Theme URI: https://github.com/falsy/falsylab-theme
 Description: A simple blog theme in monotone.
 Author: falsy
