--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme name: falsylab
+Theme name: Falsy Lab
 Theme URI: https://github.com/falsy/falsylab-theme
 Description: A simple blog theme in monotone.
 Author: falsy
